--- a/WebFundamentals/Week 1/Day 1/Core/Registration form.html
+++ b/WebFundamentals/Week 1/Day 1/Core/Registration form.html
@@ -49,27 +49,29 @@
 
       <label for="radio">I prefer not to answer</label>
       <input id="radio" type="radio" name="radio">
+   </div>
    
 
    <p>A short discription about my self</p>
    <textarea  name="content" placeholder=" A short discription about your self..." >  </textarea>
 
-   
+   <div>
       <label for="favorite language">favorite language :</label>
       <select name="favorite language" id="favorite language" >
       <option value="language">Javascript</option>
+      </select>
+   </div>
+   
+   <div style="display: block;">   
+      <input  id="checkbox"  type="checkbox" name="checkbox"  checked>
       
+      <label for="checkbox" > Yes, I would like to receive  periodic email udaptes</label>
+   </div>
    
    <div>
-   
-      <input  id="checkbox"  type="checkbox" name="checkbox"  checked>
-      <label for="checkbox" > Yes, I would like to receive  periodic email udaptes</label>
-   </form>
-      </div>
-   
    <button>Create Account</button>
    <p>*Indicates a required file</p>
-
+   </div>
 
    
 </body>
