--- a/WebFundamentals/Week 1/Day 1/Practice/Dictionary Entry.html
+++ b/WebFundamentals/Week 1/Day 1/Practice/Dictionary Entry.html
@@ -9,11 +9,13 @@
     <div>
     <h1>ninja</h1>
     <img src="pronunciation.png" alt="ninja">
-    <p>noun</p>
-    <ol>
-        <li>A practitioner skilled in the Japanese art of ninjutsu</li>
-        <li>A programmer who breaks down problems with zen-like focus</li>
-    </ol>
+    
+    <p><em>noun</em></p>
+        <ol>
+            <li>A practitioner skilled in the Japanese art of ninjutsu</li>
+            <li>A programmer who breaks down problems with zen-like focus</li>
+        </ol>
+    
 </div>
 </body>
 </html>
