--- a/WebFundamentals/Week 1/Day 4/Practice/UserCard.html
+++ b/WebFundamentals/Week 1/Day 4/Practice/UserCard.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
     <div class="nav">
-        <img class="user" src="assests/user-circle.png" alt="image">
+        <img class="user" src="assests/you.jpg" alt="image">
     </div>
 
     <div>
