--- a/WebFundamentals/Week 1/Day 4/Core/profile page.html
+++ b/WebFundamentals/Week 1/Day 4/Core/profile page.html
@@ -56,16 +56,15 @@
 
 
 
-<div class="requests"></div>
-<h3>nnnnn</h3>
+<div class="requests">
+    <h4>Connection Requests</h4
 
 
+</div>
 
-
-
-
-
-<div class="Connections"></div>
+<div class="connections">
+    <h4>Your Connections</h4>
+</div>
 
 
 
