--- a/WebFundamentals/Week 2/Day 1/Practice/index.html
+++ b/WebFundamentals/Week 2/Day 1/Practice/index.html
@@ -28,7 +28,7 @@
 
             <!-- this is a placeholder replace it with a real video -->
             <figure class="placeholder">
-                <video src="pixcel video.mp4"   muted  width="100%" height="100%" onmouseover="play(this)" onmouseout="pause(this)"> </video>
+                <video src="pixcel video.mp4"   muted  width="100%" height="100%" onmouseover="play(this);" onmouseout="pause(this);"> </video>
 
             </figure>
 
