--- a/WebFundamentals/Week 2/Day 2/Core/like1.html
+++ b/WebFundamentals/Week 2/Day 2/Core/like1.html
@@ -10,8 +10,8 @@
     <div class="container">
     <div class="up">
     <h2> Some User</h2>
-    <p> 3 likes(s)<p>
-    <button>Like</button>
+    <p> <span id="count">3</span> likes(s)<p>
+    <button onclick="morta('#count')">Like</button>
     </div>
     <div class="down">
         <p class="text">This is some filler Text, it can say anithing</p>
