--- a/WebFundamentals/Week 2/Day 2/Core/like2.html
+++ b/WebFundamentals/Week 2/Day 2/Core/like2.html
@@ -30,8 +30,8 @@
         <div class="container-1">
             <div class="Neil" >
             <h4>Neil M</h4>
-            <span>9 likes(s)</span>
-            <button>Like</button>
+            <span ><span id="pount">9</span>likes(s)</span>
+            <button onclick="pam('#pount')">Like</button>
             </div>
                 <p>I just seet up this new discord bot, let me</p>
                 <p>know what you all think. <a href="#">Link</a></p>
@@ -40,8 +40,8 @@
         <div class="container-2">
             <div class="Nickole" >
             <h4>Nickole K</h4>
-            <span>12 likes(s)</span>
-            <button>Like</button>
+            <span><span id="count" >12</span> likes(s)</span>
+            <button onclick="ram('#count')" >Like</button>
             </div>
                 <p>Juste finished my <a href="#">next comic</a>, check ik out</p>
                 
@@ -50,8 +50,8 @@
         <div class="container-3">
             <div class="Jim" >
             <h4>Jim R</h4>
-            <span>9 likes(s)</span>
-            <button>Like</button>
+            <span><span id="tount">9</span>likes(s)</span>
+            <button onclick="tam('#tount')">Like</button>
             </div>
                 <p>I can't stop listening to the <a href="#">new album</a> </p>
                 <p>how else is liking it</p>
