--- a/WebFundamentals/Week 2/Day 2/Practice/profile-page/index.html
+++ b/WebFundamentals/Week 2/Day 2/Practice/profile-page/index.html
@@ -35,11 +35,11 @@
                     <img src="images/jane-m.jpg" alt="jane" class="avatar-m">
                 </div>
                 <div class="card-body">
-                    <h1>Jane Doe</h1>
+                    <h1 id="bom">Jane Doe</h1>
                     <h3><img src="icons/map-marker.png" alt="pin" class="icon-s"> Seattle</h3>
                     <p>Developer | Engineer | Problem Solver<br>
                     Master of shadows and the Internet!</p>
-                    <p><a href="#"><img src="icons/gear.png" alt="gear" class="icon-s"> edit profile</a></p>
+                    <p  onclick="changeMe()" ><a href="#"><img src="icons/gear.png" alt="gear" class="icon-s" > edit profile</a></p>
                 </div>
             </div>
 
@@ -66,10 +66,10 @@
                     <span class="badge">2</span>
                     <h3>Connection Requests</h3>
                 </div>
-                <ul class="card-list">
-                    <li class="card-list-item">
+                <ul class="card-list"  >
+                    <li class="card-list-item" onclick="hide(this)" >
                         <span>
-                            <img src="images/todd-s.jpg" alt="todd" class="avatar-s">
+                            <img src="images/todd-s.jpg" alt="todd" class="avatar-s" ;>
                             Todd E
                         </span>
                         <span>
@@ -77,7 +77,7 @@
                             <img src="icons/close-circle.png" alt="close" class="icon">
                         </span>
                     </li>
-                    <li class="card-list-item">
+                    <li class="card-list-item" >
                         <span>
                             <img src="images/phil-s.jpg" alt="phil" class="avatar-s">
                             Phil E
